--- a/main.html
+++ b/main.html
@@ -8,9 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>Because i love to do code and coding is my passion</p>
+
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
 
 </html>
